[package]
name = "generate-xkeys"
version = "0.1.0"
authors = ["Jordan Rash <15827604+jordan-rash@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = {version = "0.3.68", features = [ "console" ]} 
nkeys = { version = "0.4.0", features = [ "xkeys" ]}
getrandom = { version = "0.2.12", features = ["wasm-bindgen", "js"] }
js-sys = "0.3.68"
serde_json = "1.0.113"
serde = "1.0.196"
wasm-bindgen-test = "0.3.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
